/*
 * $Id$
 */

2011-10-05 13:41 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/hrbcompat/errorsys/wxherrorsys.prg
     * set error state if division by zero

2011-10-03 11:37 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/raddox.ch
  *  src/raddox/TField.prg
     % added explicit index expression value to set in TField definition, this
       expression will be used to construct the index

2011-09-30 15:41 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/raddox/TIndex.prg
     * show error on tagname len > 10

  *  src/raddox/TTable.prg
     ! Fixed creating index tag with tagname property value

2011-09-29 11:58 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/raddox/TField.prg
     % added to TDateTime class the function 'DiffSeconds' which returns a float
       with the difference on seconds for the given datetime parameter

2011-09-27 10:37 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/hrbcompat/tbrowse/wxhBrowseDbProvider.prg
     * added DATA to store picture used for type "T" values

2011-09-26 13:44 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/raddox/TField.prg
     % added parameter to IndexExpression() to give fieldName to build expression

2011-09-26 11:05 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/xerror.ch
     * minor cleanup

2011-09-26 08:45 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/xerror.ch
     * updated missing header

2011-09-26 08:00 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/hrbcompat/errorsys/wxherrorsys.prg
     * removed loop for show error window (!)
     * detecting hash contained in cargo member of error object to set some
       settings

  *  src/raddox/TField.prg
     * using new error method to handle errors

  *  src/raddox/TTable.prg
     * added specific error handler function to TTable/TField classes

